--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="main">首页</string>
     <string name="panic">抢沙发</string>
     <string name="bbs">社区</string>
-    <string name="person">我的</string>
+    <string name="person">个人中心</string>
     <string name="searchSF">搜索沙发</string>
     <string name="seekSF">寻找沙发</string>
     <string name="ReleaseSF">发布沙发</string>
